--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,9 +3,9 @@ body {
   background-color: #f5f5f5;
 }
 
-/* Asegurar que el contenido principal tenga buena altura */
+/* Asegura que el contenido principal tenga buena altura */
 .main-wrapper {
-  min-height: calc(100vh - 56px); /* 56px aprox alto navbar */
+  min-height: calc(100vh - 56px);
 }
 
 /* Resaltar un poco el número del contador */
@@ -27,4 +27,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (min-width: 768px) {
+  .app-main {
+    flex-direction: row;       /* ahora los .card van lado a lado */
+    align-items: flex-start;
 }
